--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
     "express": "^4.17.1",
+    "express-validator": "^6.14.2",
     "pg": "^8.4.1",
     "sequelize": "5.21.3",
     "ts-node": "^9.0.0",
