--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@types/body-parser": "1.19.0",
         "@types/express": "4.17.8",
+        "@types/i18n": "^0.13.6",
         "@types/jsonwebtoken": "^9.0.0",
         "@types/node": "^14.14.2",
         "@types/validator": "^13.1.0",
@@ -28,6 +29,7 @@
         "eslint-plugin-import": "^2.22.1",
         "express": "^4.17.1",
         "express-validator": "^6.14.2",
+        "i18n": "^0.15.1",
         "jsonwebtoken": "^9.0.0",
         "pg": "^8.4.1",
         "sequelize": "5.21.3",
