--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
         "eslint-config-airbnb-base": "^14.2.0",
         "eslint-plugin-import": "^2.22.1",
         "express": "^4.17.1",
+        "express-async-errors": "^3.1.1",
         "express-validator": "^6.14.2",
         "i18n": "^0.15.1",
         "jsonwebtoken": "^9.0.0",
         "pg": "^8.4.1",
         "sequelize": "5.21.3",
         "ts-node": "^9.0.0",
-        "typescript": "^4.0.3"
+        "typescript": "^4.0.3",
+        "winston": "^3.8.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.20",
